feat: Subpixel precision and error margin for redshift measurements